--- a/index.html
+++ b/index.html
@@ -70,51 +70,79 @@
     </div>
   </section>
 
-  <!-- Favs Section -->
-  <section class="favs" id="favs">
-    <h2 class="section-title">Favs</h2>
-    <div class="favs-container">
-      <div class="fav-item">
-        <i class="fa-brands fa-spotify"></i>
-        <h3>Listening</h3>
-        <p><a href="https://open.spotify.com/artist/4S9EykWXhStSc15wEx8QFK" target="_blank" rel="noopener noreferrer">Céline Dion on Spotify</a></p>
-      </div>
-      <div class="fav-item">
-        <i class="fa-solid fa-book-open"></i>
-        <h3>Reading</h3>
-        <p><em>Eliana</em> by Tere Liye</p>
-      </div>
-      <div class="fav-item">
-        <i class="fa-solid fa-film"></i>
-        <h3>Movie</h3>
-        <p><em>Your Name (Kimi no Na Wa)</em></p>
-      </div>
+<!-- Favs Section -->
+<section class="favs" id="favs">
+  <h2 class="section-title">Favs</h2>
+  <div class="favs-container">
+
+    <div class="fav-item">
+      <i class="fa-brands fa-spotify"></i>
+      <h3>Listening</h3>
+      <p><a href="https://open.spotify.com/artist/4S9EykWXhStSc15wEx8QFK" target="_blank" rel="noopener noreferrer">Céline Dion on Spotify</a></p>
     </div>
-  </section>
+
+    <div class="fav-item">
+      <i class="fa-solid fa-book-open"></i>
+      <h3>Reading</h3>
+      <p><em>Eliana</em> by Tere Liye</p>
+    </div>
+
+    <div class="fav-item">
+      <i class="fa-solid fa-film"></i>
+      <h3>Movie</h3>
+      <p><em>Your Name (Kimi no Na Wa)</em></p>
+    </div>
+
+    <div class="fav-item">
+      <i class="fa-solid fa-music"></i>
+      <h3>Melody</h3>
+      <p>A harmony that drifts softly like lilac in the breeze.</p>
+    </div>
+
+    <div class="fav-item">
+      <i class="fa-solid fa-cloud-rain"></i>
+      <h3>Rain</h3
+      <p>Drizzle falls upon lily petals.</p>
+    </div>
+
+    <div class="fav-item">
+      <i class="fa-solid fa-seedling"></i>
+      <h3>Lily</h3>
+      <p>Quiet blooms that whisper of grace and resilience.</p>
+    </div>
+  </div>
+</section>
 
   <!-- Moody Blues Section -->
-  <section class="moody-blues" id="moody-blues">
-    <h2 class="section-title">Moody Blues</h2>
-    <img src="moody blues.jpg" alt="Moody Blues Flower" class="moody-flower-img" style="width:100%; max-width:400px; border-radius:12px; box-shadow: 0 4px 15px rgba(180,159,204,0.4); margin-bottom: 2rem;" />
+<section class="moody-blues" id="moody-blues">
+  <h2 class="section-title center-title">Moody Blues</h2>
+
+  <div class="moody-wrapper">
+    <img src="moody blues.jpg" alt="Moody Blues Flower" class="moody-flower-img" />
+
     <div class="moody-content">
       <p class="moody-description">
-        Phlox Drummondii ‘Moody Blues’ adalah bunga kecil yang dihiasi dengan warna ungu-lilac yang lembut. Bunga ini tumbuh subur di lingkungan yang keras, seperti tanah kering dan panas di Texas. Ia tidak menunggu kondisi yang sempurna untuk mekar—sebaliknya, ia mekar dengan indah di tengah kesulitan. Ketahanan ini menjadikannya simbol kekuatan yang tenang, ketahanan yang lembut, dan kecantikan yang bersinar bahkan di hadapan tantangan. Untuk “tumbuh seperti Moody Blues” berarti berkembang dengan anggun meskipun menghadapi kesulitan. Ini tentang menggambarkan kekuatan yang teguh, ketahanan yang abadi, dan keindahan yang abadi melalui cobaan hidup. Berbunga di mana pun Anda ditanam, terima kenyataan Anda dengan keberanian, dan tetap setia pada warna unik Anda—terlepas dari seberapa berat perjalanan yang Anda hadapi.
+        <strong>Phlox Drummondii ‘Moody Blues’</strong> is een wilde bloeiende plant uit het geslacht <em>Phlox</em>, behorend tot de familie <em>Polemoniaceae</em>. De kleine bloemen dragen zachte tinten van paars en lila, een stille elegantie uitstralend. Deze plant gedijt in ruwe omstandigheden in droge aarde en onder de felle zon van Texas. Ze wacht niet op perfecte omstandigheden om te bloeien, maar opent haar bloemen midden in de hardheid van het leven. Uit haar tere vorm groeit een kracht die geen aandacht zoekt, maar met gratie standhoudt. Deze veerkracht maakt haar tot een symbool van stille moed, zachte volharding en stralende schoonheid tegenover de uitdagingen van het leven. “<strong>Groei als de Moody Blues</strong>” betekent gracieus bloeien ondanks moeilijkheden, een onverzettelijke kracht, blijvende veerkracht en tijdloze schoonheid belichamen in elke beproeving. Bloei waar je geplant bent, zie de werkelijkheid onder ogen met moed, en blijf trouw aan je eigen kleur — hoe moeilijk de reis ook mag zijn.
       </p>
     </div>
+  </div>
+
+  <div class="moody-bottom">
     <div class="moody-quote">
-      <blockquote>"The flower that blooms in adversity is the rarest and most beautiful of all." – <em>Mulan</em></blockquote>
+      <blockquote>"Then may your roots find strength in the dry soil, your colors never fade as you walk the new journey ahead." – <em> Akaraa </em></blockquote>
     </div>
-    <div style="margin-top: 2rem;">
-      <a href="https://open.spotify.com/track/1uv2yZ0Em9Hu5QiYVUr9nB" target="_blank" rel="noopener noreferrer" aria-label="Open 'I Love You' by Celine Dion on Spotify" style="display:inline-flex; align-items:center; gap:0.5rem; background-color:#B49FCC; padding:0.8rem 1.4rem; border-radius:2rem; color:#F9F7FC; font-weight:600; font-size:1.6rem; box-shadow: 0 0 15px #B49FCC; transition: background-color 0.3s ease;">
-        <!-- Spotify Icon SVG -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 168 168" fill="#F9F7FC" width="28" height="28">
-          <circle cx="84" cy="84" r="84" fill="#B49FCC"/>
-          <path fill="#F9F7FC" d="M119.2 120.8c-2.4 0-3.2-1.6-7.2-4.8-17.6-11.2-39.2-14.4-64.8-9.6-3.2.8-6.4-1.6-7.2-5.6-.8-3.2 1.6-6.4 5.6-7.2 28-5.6 52 0 71.2 12.8 3.2 2.4 3.2 6.4.8 9.6-1.6 1.6-3.2 2.4-4.8 2.4zM119.2 88c-2.4 0-3.2-1.6-7.2-4.8-14.4-9.6-36-12-53.6-8-3.2.8-6.4-1.6-7.2-5.6-.8-3.2 1.6-6.4 5.6-7.2 21.6-4 48 0 67.2 13.6 3.2 2.4 3.2 6.4.8 9.6-1.6 2.4-3.2 3.2-5.6 3.2zM111.2 56c-2.4 0-3.2-1.6-6.4-4.8-11.2-7.2-28-8.8-45.6-6.4-3.2.8-6.4-1.6-7.2-5.6-.8-3.2 1.6-6.4 5.6-7.2 18.4-2.4 39.2-1.6 54.4 7.2 3.2 1.6 4.8 5.6 3.2 9.6-1.6 3.2-4 4.8-8 4.8z"/>
-        </svg>
-        Listen on Spotify
+
+    <div class="spotify-link">
+      <a href=https://open.spotify.com/track/7hyFKrPZo1Zv4D35MpTBdr?si=03c78b1643814bc9" 
+         target="_blank" 
+         rel="noopener noreferrer"
+         class="spotify-btn">
+        <i class="fa-brands fa-spotify"></i>
+        <span>“Ik Heb Je Lief” - Céline Dion</span>
       </a>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Education Section -->
   <section class="education" id="education">
@@ -128,14 +156,19 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="contact" id="contact">
-    <h2 class="section-title">Contact Me</h2>
-    <div class="contact-icons">
-      <a href="#" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
-      <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
-    </div>
-  </section>
-</body>
-</html>
+<!-- Contact Section -->
+<section class="contact" id="contact">
+  <h2 class="section-title">Contact Me</h2>
+  <div class="contact-icons">
+    <a href="https://github.com/lilacath" target="_blank" aria-label="GitHub">
+      <i class="fa-brands fa-github"></i>
+    </a>
+    <a href="https://www.instagram.com/lutfianali?igsh=MTFzMjhyYmJqbm4weg==" target="_blank" aria-label="Instagram">
+      <i class="fa-brands fa-instagram"></i>
+    </a>
+  </div>
+
+  <p style="margin-top: 2rem; font-size: 1.4rem; color: #6E5B7B;">
+    Let’s meet where lilacs bloom and melody drifts!
+  </p>
+</section>
